--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 
 
-h2
+h1, h2
 {
 
 	font-family: 'Roboto Condensed', sans-serif;
@@ -18,4 +18,16 @@ img {
 	width: 250px;
 
 	border-radius: 50%;
+}
+
+
+#landing, #gallery{
+
+
+	height: 80vh;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
