--- a/style.css
+++ b/style.css
@@ -30,4 +30,32 @@ img {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	background-color: #ADD8E6;
+}
+
+
+ul{
+	list-style: none;
+	padding: 0;
+
+}
+
+h2 {
+
+	color: #007bff;
+}
+
+.tools{
+
+	padding: 25px;
+	height: 200px;
+	border: 5px solid #f2f2f2;
+	margin: 20px;
+	width:75%;
+	color: white;
+
+}
+
+html{
+	scroll-behavior: smooth;
 }
